公式ページのサンプルの内容に変更